--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
 
@@ -27,20 +27,20 @@ jobs:
         run: dotnet build AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj --configuration Release
         
       - name: dotnet publish
-        run: dotnet publish AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj -c Release -o ./myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -57,17 +57,13 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D1E09C505E844D18A8FD642D5C025B0D }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3C35CECCC1374260BC88DFC545809F22 }}
     
-      # 1. PASSO NOVO: Obter o IP do Runner
       - name: Get Runner IP
         id: get-runner-ip
         run: |
-          # Usa um serviço externo para obter o IP público do runner
           RUNNER_IP=$(curl -s https://api.ipify.org)
-          echo "Runner IP: $RUNNER_IP"
           echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
           echo "FIREWALL_RULE_NAME=github-action-runner-rule" >> $GITHUB_ENV
 
-      # 2. PASSO NOVO: Adicionar o IP ao Firewall do Azure SQL
       - name: Add Runner IP to SQL Firewall
         run: |
           az sql server firewall-rule create \
@@ -76,33 +72,25 @@ jobs:
             --name "${{ env.FIREWALL_RULE_NAME }}" \
             --start-ip-address "${{ env.RUNNER_IP }}" \
             --end-ip-address "${{ env.RUNNER_IP }}"
-        env:
-          AZURE_SUBSCRIPTION: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3C35CECCC1374260BC88DFC545809F22 }}
 
-      # 3 PASSO: Executar Migrations do EF Core (ANTES do deploy do app)
       - name: Run .NET EF Migrations
         env:
           CustomerConnectionString: ${{ secrets.CustomerConnectionString }}
         run: |
-          # 1. Instala a ferramenta EF Core (já estava correto)
           dotnet tool install --global dotnet-ef
-          
-          # 2. Executa o Database Update
-          dotnet ef database update `
-          --project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj `
-          --startup-project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj `
-          --connection "${{ secrets.CustomerConnectionString }}"
+          export PATH="$PATH:/root/.dotnet/tools"
+          dotnet ef database update \
+            --project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj \
+            --startup-project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj \
+            --connection "${{ secrets.CustomerConnectionString }}"
       
-      # 4. PASSO NOVO: Remover o IP do Firewall (MUITO IMPORTANTE POR SEGURANÇA)
       - name: Remove Runner IP from SQL Firewall
-        if: always() # Garante que rode mesmo que a migration falhe
+        if: always()
         run: |
           az sql server firewall-rule delete \
             --resource-group "app-service-new" \
             --server "app-service-server" \
             --name "${{ env.FIREWALL_RULE_NAME }}"
-        env:
-          AZURE_SUBSCRIPTION: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3C35CECCC1374260BC88DFC545809F22 }} # Use a sua secret
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
