Convert the pipeline to use windows runner

--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read
 
@@ -19,13 +19,13 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-      
+
       - name: Restore dependencies
         run: dotnet restore AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj
-        
+
       - name: Build with dotnet
         run: dotnet build AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj --configuration Release
-        
+
       - name: dotnet publish
         run: dotnet publish AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj -c Release -o ./myapp
 
@@ -36,7 +36,7 @@ jobs:
           path: ./myapp
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     permissions:
       id-token: write
@@ -49,53 +49,52 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_583D5389BD184876958E6DF72946465E }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D1E09C505E844D18A8FD642D5C025B0D }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3C35CECCC1374260BC88DFC545809F22 }}
-    
+
       - name: Get Runner IP
         id: get-runner-ip
         run: |
-          RUNNER_IP=$(curl -s https://api.ipify.org)
-          echo "RUNNER_IP=$RUNNER_IP" >> $GITHUB_ENV
-          echo "FIREWALL_RULE_NAME=github-action-runner-rule" >> $GITHUB_ENV
+          $RUNNER_IP = Invoke-RestMethod -Uri https://api.ipify.org
+          echo "RUNNER_IP=$RUNNER_IP" >> $env:GITHUB_ENV
+          echo "FIREWALL_RULE_NAME=github-action-runner-rule" >> $env:GITHUB_ENV
 
       - name: Add Runner IP to SQL Firewall
         run: |
-          az sql server firewall-rule create \
-            --resource-group "app-service-new" \
-            --server "app-service-server" \
-            --name "${{ env.FIREWALL_RULE_NAME }}" \
-            --start-ip-address "${{ env.RUNNER_IP }}" \
-            --end-ip-address "${{ env.RUNNER_IP }}"
+          az sql server firewall-rule create `
+            --resource-group "app-service-new" `
+            --server "app-service-server" `
+            --name "${env:FIREWALL_RULE_NAME}" `
+            --start-ip-address "${env:RUNNER_IP}" `
+            --end-ip-address "${env:RUNNER_IP}"
 
       - name: Run .NET EF Migrations
         env:
           CustomerConnectionString: ${{ secrets.CustomerConnectionString }}
         run: |
           dotnet tool install --global dotnet-ef
-          export PATH="$PATH:/root/.dotnet/tools"
-          dotnet ef database update \
-            --project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj \
-            --startup-project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj \
+          setx PATH "%PATH%;%USERPROFILE%\.dotnet\tools"
+          dotnet ef database update `
+            --project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj `
+            --startup-project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj `
             --connection "${{ secrets.CustomerConnectionString }}"
-      
+
       - name: Remove Runner IP from SQL Firewall
         if: always()
         run: |
-          az sql server firewall-rule delete \
-            --resource-group "app-service-new" \
-            --server "app-service-server" \
-            --name "${{ env.FIREWALL_RULE_NAME }}"
+          az sql server firewall-rule delete `
+            --resource-group "app-service-new" `
+            --server "app-service-server" `
+            --name "${env:FIREWALL_RULE_NAME}"
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'app-service-macedo-2'
           slot-name: 'Production'
-          package: .
+          package: .  
