Fix echo connstring teste

--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -77,7 +77,7 @@ jobs:
         env:
           CustomerConnectionString: ${{ secrets.CustomerConnectionString }}
         run: |
-          echo "Conteúdo do Secret (CUIDADO!): ${CustomerConnectionString}"
+          echo "Conteúdo do Secret (CUIDADO!): $env:CustomerConnectionString"
           dotnet tool install --global dotnet-ef
           dotnet ef database update `
             --project AzureDeployStudy/AzureDeployStudy/AzureDeployStudy.csproj `
